# MobRend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: app.cpp  geometry_shader.cpp
include/mobrend/: application.h  asset_manager.h  buffer.h  camera.h  fps_camera.h  framebuffer.h  gui.h  index_buffer.h  input.h  material.h  mesh.h  model.h  observer_camera.h  renderer.h  shader.h  texture.h  uniform_buffer.h  vertex_buffer.h  window.h
include/mobrend/glfw/: window.h
include/mobrend/opengl/: framebuffer.h  index_buffer.h  renderer.h  shader.h  texture.h  uniform_buffer.h  vertex_buffer.h
resources/: default_shader.frag  default_shader.vert  lightSource.frag  lightSource.vert  lightSource_frag.spv  lightSource_vert.spv
resources/models/: kunai.fbx
resources/shaders/: default.frag  default_shader.frag  default_shader.vert  gaussian.frag  geometry_example.frag  geometry_example.geom  geometry_example.vert  lightSource.frag  quad.frag  quad.vert  reflections.frag  reflections.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  solid_color.frag  solid_color.vert
scripts/: compile_shaders.py
src/: app.cpp  application.cpp  asset_manager.cpp  camera.cpp  fps_camera.cpp  framebuffer.cpp  gui.cpp  image_loader.cpp  index_buffer.cpp  input.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  mr_application.cpp  mr_asset_manager.cpp  mr_buffer.cpp  mr_camera.cpp  mr_fps_camera.cpp  mr_framebuffer.cpp  mr_gui.cpp  mr_image_loader.cpp  mr_input.cpp  mr_light.cpp  mr_mesh.cpp  mr_model.cpp  mr_observer_camera.cpp  mr_pure_virtual_destructors.cpp  mr_renderer.cpp  mr_texture.cpp  mr_uniform_layout.cpp  mr_vertex_buffer.cpp  mr_vertex_layout.cpp  mr_window.cpp  observer_camera.cpp  pure_virtual_destructors.cpp  renderer.cpp  shader.cpp  texture.cpp  uniform_buffer.cpp  (+4 more)
src/glfw/: window.cpp
src/include/: mr_application.h  mr_asset_manager.h  mr_buffer.h  mr_camera.h  mr_fps_camera.h  mr_framebuffer.h  mr_image_loader.h  mr_index_buffer.h  mr_input.h  mr_input_event.h  mr_light.h  mr_material.h  mr_mesh.h  mr_model.h  mr_renderer.h  mr_shader.h  mr_texture.h  mr_uniform_buffer.h  mr_uniform_layout.h  mr_vertex_buffer.h  mr_vertex_layout.h  mr_window.h
src/include/mr_platform/: mr_gl_buffer.h  mr_gl_framebuffer.h  mr_gl_index_buffer.h  mr_gl_mesh.h  mr_gl_renderer.h  mr_gl_shader.h  mr_gl_texture.h  mr_gl_uniform_buffer.h  mr_gl_vertex_buffer.h  mr_glfw_input.h  mr_glfw_window.h
src/mr_platform/: mr_gl_buffer.cpp  mr_gl_framebuffer.cpp  mr_gl_index_buffer.cpp  mr_gl_mesh.cpp  mr_gl_renderer.cpp  mr_gl_shader.cpp  mr_gl_texture.cpp  mr_gl_uniform_buffer.cpp  mr_gl_vertex_buffer.cpp  mr_glfw_window.cpp
src/opengl/: framebuffer.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  uniform_buffer.cpp  vertex_buffer.cpp
